--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/twentytwenty.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
@@ -82,7 +83,7 @@
         </div>
     </header>
 
-    <div class="post__header">
+    <div class="post__header" data-aos="fade-up">
         <div class="post__header__wrapper">
             <div class="top__slider-wrapper">
                 <div class="top__slider__container">
@@ -115,7 +116,7 @@
         </div>
     </div>
 
-    <div class="header__form">
+    <div class="header__form" data-aos="fade-up">
         <div class="header__form__wrapper">
             <div class="header__form__text">
                 <h3 class="form__title">Делаем имплантацию зубов по ценам 2020 года!</h3>
@@ -131,7 +132,7 @@
         </div>
     </div>
 
-    <div class="process" id="process">
+    <div class="process" id="process" data-aos="fade-up">
         <h2 class="h2__title">Процесс имплантации</h2>
         <div class="process__implant">
             <div class="video__wrapper">
@@ -144,7 +145,7 @@
         </div>
     </div>
 
-    <div class="FAQ" id="FAQ">
+    <div class="FAQ" id="FAQ" data-aos="fade-up">
         <h2 class="h2__title">Ответы на частые вопросы</h2>
         <div class="faq__items">
             <div class="faq__item">
@@ -186,7 +187,7 @@
         </div>
     </div>
 
-    <div class="implant" id="implant">
+    <div class="implant" id="implant" data-aos="fade-up">
         <div class="implant__wrapper" >
             <h2 class="h2__title">Этапы имплантации</h2>
             <p class="block__description">
@@ -204,7 +205,7 @@
         </div>
     </div>
 
-    <div class="advantages" id="advantages">
+    <div class="advantages" id="advantages" data-aos="fade-up">
         <div class="advantages__wrapper">
             <h2 class="h2__title">Преимущества нашей клиники</h2>
             <div class="advantages__items">
@@ -233,7 +234,7 @@
         </div>
     </div>
 
-    <div class="content__form">
+    <div class="content__form" data-aos="fade-up">
         <div class="content__form__wrapper"> 
             <div class="content__form__container">
                 <div class="form__title">Запишитесь на бесплатную консультацию!</div>
@@ -250,7 +251,7 @@
         </div>
     </div>
 
-    <div class="gallery" id="gallery">
+    <div class="gallery" id="gallery" data-aos="fade-up">
         <h2 class="h2__title">Галерея работ</h2>
         <div class="gallery__slider">
             <div class="arrow__prev slider__arrow"><img src="img/slider__arrow.svg" alt=""></div>
@@ -278,7 +279,7 @@
         </div>
     </div>
 
-    <div class="about" id="about">
+    <div class="about" id="about" data-aos="fade-up">
         <h2 class="h2__title">О клинике</h2>
         <div class="block__description">
             Наша клиника была основана в 2006-м году. Начиная свой путь с 3 сотрудников в штате, мы выросли до 150 специалистов.
@@ -305,7 +306,7 @@
         </div>
     </div>
 
-    <div class="doctors" id="doctors">
+    <div class="doctors" id="doctors" data-aos="fade-up">
         <h2 class="h2__title">Наши врачи</h2>
         <div class="block__description">Самыми главными для любой клиники являются довольные пациенты. На  втором месте находятся довольные сотрудники. Каждый из них представляет собой сплав опыта и желание обучаться новому!</div>
         <div class="doctors__gallery">
@@ -395,9 +396,7 @@
         </div>
     </div>
 
-    
-
-    <div class="rating" id="rating">
+    <div class="rating" id="rating" data-aos="fade-up">
         <h2 class="h2__title">Видеоотзывы наших клиентов</h2>
         <div class="rating__wrapper">
             <div class="rating__content">
@@ -467,7 +466,7 @@
         </div>
     </div>
 
-    <div class="contacts" id="contacts">
+    <div class="contacts" id="contacts" data-aos="fade-up">
         <h2 class="h2__title">Контакты</h2>
         <div class="contacts__wrapper">
             <div class="address">
