--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                     </div>
                     <div class="top__slider__item">
                         <h2 class="item__title">
-                            <span class="color__text">Текст №2
+                            <span class="color__text">Скидка до 5000 рублей</span> на каждый имплант
                         </h2>
                         <div class="item__text">При установке имплантов, мы используем только современные технологии, которые в совокупности с профессионализмом наших врачей приживаются один раз и на всю жизнь</div>
                     </div>
                     <div class="top__slider__item">
                         <h2 class="item__title">
-                            <span class="color__text">Текст №3
+                            <span class="color__text">Скидка до 5000 рублей</span> на каждый имплант
                         </h2>
                         <div class="item__text">При установке имплантов, мы используем только современные технологии, которые в совокупности с профессионализмом наших врачей приживаются один раз и на всю жизнь</div>
                     </div>
