--- a/index.html
+++ b/index.html
@@ -546,6 +546,17 @@
                     <div class="doctor__mob__item">
                         <div class="doctor__mob__name">
                             <div class="doctor__mob__fio">
+                                Хасанов Динислам Миргалиевич
+                                </div>
+                            <div class="doctor__mob__spec">врач стоматолог-хирург-имплантолог</div>
+                        </div>
+                        <div class="doctor__mob__photo">
+                            <img src="img/doc__13.png" alt="">
+                        </div>
+                    </div>
+                    <div class="doctor__mob__item">
+                        <div class="doctor__mob__name">
+                            <div class="doctor__mob__fio">
                                 Шарипов Ирек Фаритович
                                 </div>
                             <div class="doctor__mob__spec">врач стоматолог-ортопед</div>
